# cui-app-template

./: .gitignore  Cargo.toml  LICENSE  README.md
cui/: app.cui  data.cui  ideas.cui
cwf/: app.cwf
cwl/: accessibility.cwl  app.cwl  ideas.cwl
src/: lib.rs
www/: index.js  package-lock.json  package.json  webpack.config.js
