[package]
authors = ["us"]
description = "Skeleton for a cwl web app"
edition = "2018"
license = "MIT"
name = "create-cwl-app"
repository = "https://github.com/thisminute/create-cwl-app"
version = "0.0.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
proc-macro2 = { version = "1.0", features = ["nightly"] }
syn = { version = "1.0", features = ["extra-traits", "full", "visit-mut", "parsing"] }
quote = "1.0"
cascading-wasm-language = { path = "../cascading-wasm-language" }
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.web-sys]
version = "0.3"
features = [
  'CssStyleDeclaration',
  'CssStyleSheet',
  'Document',
  'Element',
  'Event',
  'EventListener',
  'EventTarget',
  'HtmlElement',
  'HtmlHeadElement',
  'Location',
  'Node',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.0"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
