[package]
authors = ["us"]
description = "Skeleton for a cwl web app"
edition = "2018"
license = "MIT"
name = "create-cwl-app"
repository = "https://github.com/thisminute/create-cwl-app"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cascading-wasm-language = {path = ".."}
console_error_panic_hook = {version = "0.1", optional = true}
lazy_static = "1.4"
wasm-bindgen = "0.2"

[dependencies.web-sys]
features = [
  "console",
  "CssStyleDeclaration",
  "CssStyleSheet",
  "Document",
  "Element",
  "Event",
  "EventListener",
  "EventTarget",
  "HtmlCollection",
  "HtmlElement",
  "HtmlHeadElement",
  "Location",
  "Node",
  "NodeList",
  "Window",
]
version = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
