[package]
authors = ["us"]
description = "compiles CUI code into a deployable package"
edition = "2018"
license = "CC0-1.0"
name = "cui-app-template"
repository = "https://github.com/thisminute/cui-app-template"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cascading-ui = {path = "../.."}
console_error_panic_hook = "^0.1.7"
wasm-bindgen = "^0.2.83"
wasm-bindgen-test = {version = "^0.3.33", optional = true}

[dependencies.web-sys]
features = [
	"console",
	"CssStyleDeclaration",
	"CssStyleSheet",
	"Document",
	"Element",
	"Event",
	"EventListener",
	"EventTarget",
	"HtmlCollection",
	"HtmlElement",
	"HtmlHeadElement",
	"Location",
	"Node",
	"NodeList",
	"Window",
]
version = "^0.3.60"

[profile.release]
# Tell `rustc` to optimize for small (s) code size.
opt-level = "s"
